CHANGELOG
Note : this project started in October 2016.
Many improvements have been done since this date until August 2018.
Then the project has been refreshed in March 2019 with major modifications, in a more pythonic way.

06/05/2019 - 12/05/2019
    Log is now generated in HTML along multiple CSV files resulting of the various scans
    Many scans are now displayed in an HTML table
    In writer.py module
        4 news functions to manage CSV and HTML
            writeCSV()
            _row2tr()
            _rowheader()
            csv2html()
    In scans.py and software_scan.py modules
        Major modifications to generate CSV
    In main.py module
        readandcopy()
            It will now ask to open the log file in a web browser instead of notepad
            System call removed
        The files are generated in an unique folder

24/04/2019
    In software_scan.py module
        softwareInit()
            English text
            Total number of software found showned in log
        searchSoftware()
            Change conditions to keep a software
    In scans.py module
        calcFlag()
            Change condition to get flagTosave and min (otherwise it could be badly calculated)
    In complement.py module
        init()
            Change to get LAPS state (otherwise it is not detected)
    In av_date.py module
        English text

22/04/2019
    In software_scan.py module
        Code correction in softwareInit() to improve software table display
        Code correction in searchSoftware() to get software without version
    In scans.py module
        Manage an exception in hotFixesInfo() when a date cannot be parsed or does not exist

21/04/2019
    In writer.py module
        Clean code
            Functions removed
                writeFinalLog
                copyFile
        English doctrings
            prepaLogScan
            write
            writeLog
    In scan.py module
        English doctrings
            detectOS