@@ -4,10 +4,7 @@
     ask_dismount.py
         line 25 os.system('cls')
         line 61 subprocess.call(cmdlineUser, cwd=dir, shell=True, stdout=subprocess.PIPE, stdin=subprocess.PIPE, stderr=subprocess.PIPE)
-    
+
 - Good html indent
 
-- network interfaces : which ones are used ? what dns ? what default gateway ?
-
 -Update demo gif with new html format
-    
